<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.example.datarsd1.mdbsocials_2.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="25sp"
        android:paddingTop="25sp"
        android:background="@drawable/bordershape"
        android:layout_marginRight="50sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LoginTextField"
            android:padding="10sp"
            android:text="@string/SignInPagePrompt"
            android:gravity="center"
            android:layout_marginBottom="10sp"
            android:background="@drawable/titletextfield"
            android:typeface="monospace"
            android:textColor="#ffffff"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EmailHint"
            android:background="@drawable/usernametext"
            android:gravity="center"
            style="@style/LoginTextField"
            android:id="@+id/emailInput"
            android:inputType="textEmailAddress">

            <requestFocus/>

        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PasswordHint"
            android:background="@drawable/passwordtext"
            android:gravity="center"
            style="@style/LoginTextField"
            android:id="@+id/passwordInput"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signInButtonPrompt"
                android:layout_weight="0.5"
                style="@style/LoginButtonText"
                android:layout_marginLeft="10sp"
                android:background="@drawable/buttonshape"
                android:layout_marginRight="3sp"
                android:typeface="monospace"
                android:id="@+id/loginButton"
                android:textColor="#ffffff"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signUpButtonPrompt"
                android:layout_weight="0.5"
                style="@style/LoginButtonText"
                android:layout_marginRight="10sp"
                android:background="@drawable/buttonshape"
                android:layout_marginLeft="3sp"
                android:typeface="monospace"
                android:id="@+id/signUpButton"
                android:textColor="#ffffff"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>